[package]
name = "gumball"
version = "0.1.0"
edition = "2021"
default-run = "gumball"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["mixer"]

[[bin]]
name = "disassembler"
path = "src/disassembler/main.rs"
