[package]
name = "gumball"
version = "0.1.0"
edition = "2021"
default-run = "gumball"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["sdl2"]
wasm = ["wasm-bindgen", "web-sys"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
console_error_panic_hook = "0.1.7"
js-sys = { version = "0.3.69", optional = true}
once_cell = "1.19.0"
thiserror = "1.0.63"
wasm-bindgen = {version = "0.2.92", optional = true}
web-sys = { version = "0.3.69", features = ["Window", "console", "Performance", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "KeyboardEvent", "ImageData"], optional = true}

[dependencies.sdl2]
version = "0.36.0"
optional = true
default-features = false
features = ["mixer"]



[[bin]]
name = "disassembler"
path = "src/disassembler/main.rs"
